# quebec-french-dubbing

./: .gitignore  Makefile  README.md  constraints-gpu.txt  install.sh  pyproject.toml
config/: glossary.fr-CA.yaml  job.example.yaml
scripts/: install_cosyvoice.sh  make_fixture.py
src/dubbing/: __init__.py  cli.py  config.py  ffmpeg_utils.py  gpu_runners.py  modal_app.py  models.py  pipeline.py  subtitle_rules.py  webapp.py
src/dubbing/providers/: __init__.py  registry.py  translation.py  translation_claude.py  translation_common.py  translation_ollama.py  tts.py  tts_azure.py  tts_chatterbox.py  tts_cosyvoice.py  tts_elevenlabs.py
src/dubbing/stages/: __init__.py  asr.py  cues.py  diarize.py  ingest.py  mix.py  mux.py  separate.py  subtitles.py  timefit.py  translate.py  tts.py
tests/: test_cues.py  test_gpu_runners.py  test_media_core.py  test_pipeline_e2e.py  test_providers.py  test_stage_mapping.py  test_subtitle_rules.py  test_timefit_mix.py
