[project]
name = "dubbing"
version = "0.1.0"
description = "Cost-optimized Quebec French (fr-CA) dubbing + subtitle pipeline for course/webinar video"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }

# Core dependencies always needed to author cues, subtitles, config and run the CPU stages.
dependencies = [
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "pysubs2>=1.6",
]

[project.optional-dependencies]
# Translation providers. `requests` drives the local Ollama endpoint (default);
# `anthropic` is only needed for the premium Claude provider.
translate = ["requests>=2.31", "anthropic>=0.40"]
tts = [
    "elevenlabs>=1.0",
    "azure-cognitiveservices-speech>=1.38",
    "google-cloud-texttospeech>=2.16",
    "boto3>=1.34",
]
# Local, free, GPU cloning TTS (default provider). Chatterbox over-pins its deps;
# install with the repo's constraints-gpu.txt to keep the CUDA torch trio intact.
tts-local = ["chatterbox-tts>=0.1.7"]
# Open-source GPU stages. Heavy; installed in the Modal image, not locally.
gpu = [
    "demucs>=4.0",
    "pyannote.audio>=3.1",
    "whisperx>=3.1",
]
# Audio mastering / time-fit (CPU, needs system ffmpeg + rubberband-cli).
audio = [
    "pyloudnorm>=0.1.1",
    "pyrubberband>=0.3.0",
    "soundfile>=0.12",
    "numpy>=1.26",
]
orchestration = ["modal>=0.64"]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]

[project.scripts]
dubbing = "dubbing.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dubbing"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
