[project]
name = "dubbing"
version = "0.1.0"
description = "Cost-optimized Quebec French (fr-CA) dubbing + subtitle pipeline for course/webinar video"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }

# This project has a single, GPU-based environment. The default pipeline runs
# fully local and free on your GPU, so the OSS GPU stages (Demucs / pyannote /
# WhisperX) and the CPU audio-mastering deps are core requirements — not extras.
#
# The CUDA-matched `torch`/`torchaudio`/`torchvision` trio is provided by the
# host (the venv is created with `--system-site-packages`) and pinned by
# `constraints-gpu.txt`; it is intentionally not listed here.
dependencies = [
    # Cue authoring, subtitles, config
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "pysubs2>=1.6",
    # Translation driver for the local Ollama endpoint (default provider)
    "requests>=2.31",
    # Audio mastering / time-fit (also needs system ffmpeg + rubberband-cli)
    "pyloudnorm>=0.1.1",
    "pyrubberband>=0.3.0",
    "soundfile>=0.12",
    "numpy>=1.26",
    # OSS GPU stages
    "demucs>=4.0",
    "pyannote.audio>=3.1",
    "whisperx>=3.1",
]

[project.optional-dependencies]
# Runtime deps of the default local TTS (Chatterbox voice cloning). Chatterbox
# itself is NOT listed here: it hard-pins `torch==2.6.0`, which a constraints
# file cannot override, so it is installed separately with `--no-deps` (see the
# Makefile `install` target / README Setup). These are the remaining libraries
# its `chatterbox.mtl_tts` needs once torch is left to the host trio.
tts-local = [
    "librosa==0.11.0",
    "s3tokenizer",
    "transformers==5.2.0",
    "diffusers==0.29.0",
    "resemble-perth>=1.0.0",
    "conformer==0.3.2",
    "safetensors==0.5.3",
    "spacy-pkuseg",
    "pykakasi==2.3.0",
    "omegaconf",
]
# Premium cloud providers (optional; each needs that vendor's API key).
# `anthropic` -> Claude translation; the rest -> premium TTS voices.
premium = [
    "anthropic>=0.40",
    "elevenlabs>=1.0",
    "azure-cognitiveservices-speech>=1.38",
    "google-cloud-texttospeech>=2.16",
    "boto3>=1.34",
]
# Run the GPU stages on Modal instead of the local GPU.
orchestration = ["modal>=0.64"]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]

[project.scripts]
dubbing = "dubbing.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dubbing"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
