[project]
name = "dubbing"
version = "0.1.0"
description = "Cost-optimized Quebec French (fr-CA) dubbing + subtitle pipeline for course/webinar video"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }

# This project has a single, GPU-based environment. The default pipeline runs
# fully local and free on your GPU, so the OSS GPU stages (Demucs / pyannote /
# WhisperX) and the CPU audio-mastering deps are core requirements — not extras.
#
# The CUDA-matched `torch`/`torchaudio`/`torchvision` trio is provided by the
# host (the venv is created with `--system-site-packages`) and pinned by
# `constraints-gpu.txt`; it is intentionally not listed here.
dependencies = [
    # Cue authoring, subtitles, config
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "pysubs2>=1.6",
    # Translation driver for the local Ollama endpoint (default provider)
    "requests>=2.31",
    # Audio mastering / time-fit (also needs system ffmpeg + rubberband-cli).
    # pyrubberband must be >=0.4.0: the 0.3.0 sdist has no wheel and its setup.py
    # imports the `imp` module, removed in Python 3.12, so it fails to build.
    "pyloudnorm>=0.1.1",
    "pyrubberband>=0.4.0",
    "soundfile>=0.12",
    "numpy>=2.1",
    # OSS GPU stages. Version floors here are load-bearing, not cosmetic, because
    # Chatterbox's transformers==5.2.0 (see tts-local) pulls in huggingface_hub
    # 1.x: pyannote.audio <4 forwards a removed `use_auth_token` arg to hf_hub
    # (crashes diarization), so we require >=4. WhisperX is handled specially —
    # see the note below and the Makefile `install` target.
    "demucs>=4.0",
    "pyannote.audio>=4.0",
    # WhisperX ASR runtime deps. whisperx==3.8.6 itself is installed with
    # --no-deps (like Chatterbox): its metadata caps huggingface_hub <1.0, which
    # is stale — it runs fine on hf_hub 1.x — but that cap makes a clean resolve
    # with transformers 5.2.0 impossible. These are its real runtime deps; the
    # torch trio comes from the host and torchcodec from constraints-gpu.txt.
    "ctranslate2>=4.5.0",
    "faster-whisper>=1.2.0",
    "nltk>=3.9.1",
    "pandas>=2.2.3",
    "omegaconf>=2.3.0",
]

[project.optional-dependencies]
# Runtime deps of the default local TTS (Chatterbox voice cloning). Chatterbox
# itself is NOT listed here: it hard-pins `torch==2.6.0`, which a constraints
# file cannot override, so it is installed separately with `--no-deps` (see the
# Makefile `install` target / README Setup). These are the remaining libraries
# its `chatterbox.mtl_tts` needs once torch is left to the host trio.
tts-local = [
    "librosa==0.11.0",
    "s3tokenizer",
    "transformers==5.2.0",
    "diffusers==0.29.0",
    "resemble-perth>=1.0.0",
    "conformer==0.3.2",
    "safetensors==0.5.3",
    "spacy-pkuseg",
    "pykakasi==2.3.0",
    "omegaconf",
]
# Premium cloud providers (optional; each needs that vendor's API key).
# `anthropic` -> Claude translation; the rest -> premium TTS voices.
premium = [
    "anthropic>=0.40",
    "elevenlabs>=1.0",
    "azure-cognitiveservices-speech>=1.38",
    "google-cloud-texttospeech>=2.16",
    "boto3>=1.34",
]
# Browser UI for driving the pipeline (see dubbing/webapp.py, `make web`).
webapp = ["gradio>=4.44"]
# Local cross-lingual TTS (CosyVoice / Fun-CosyVoice 3.0). CosyVoice itself is a
# from-source install with its own (conflicting) requirements — see
# scripts/install_cosyvoice.sh — so this extra only carries the model downloader.
tts-cosyvoice = ["modelscope>=1.9"]
# Run the GPU stages on Modal instead of the local GPU.
orchestration = ["modal>=0.64"]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]

[project.scripts]
dubbing = "dubbing.cli:main"
dubbing-web = "dubbing.webapp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dubbing"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
